src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost of supply</description>
        <inlineHelpText>Cost of item</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Inventory__c</fullName>
        <label>Current Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Number__c</fullName>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Life_Span__c</fullName>
        <description>Months before end of life</description>
        <inlineHelpText>Months before end of life</inlineHelpText>
        <label>Life Span Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Cycle__c</fullName>
        <description>Number of days between service or inspection</description>
        <inlineHelpText>Number of days between service or inspection</inlineHelpText>
        <label>Maintenance Cycle Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Part</label>
        <type>Checkbox</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>